# mspr

./: .gitignore  README.md  pyproject.toml
notebooks/: 01bis_tests_statistiques.ipynb  03_qualite_donnees.ipynb  04_kpis_metiers.ipynb  08_alertes.ipynb
reports/livrables/: 01_Note_de_Cadrage.docx  02_Analyse_des_Risques.docx  03_Dossier_de_Veille.docx  04_Benchmark_Solutions.docx  05_Audit_Donnees.docx  06_Note_de_Faisabilite.docx  README_livrables.md
